[project]
name = "AdventOfCode v2"
description = "With pytest magic"
version = "2.0"
authors = [{ name = "MV", email = "nope@nope.at" }]
dependencies = ['advent-of-code-data',
    'bitstring',
    'frozendict',
    'lark',
    'matplotlib',
    'more-itertools',
    'networkx',
    'numba',
    'numpy',
    'pandas',
    'pillow',
    'pytest',
    'pytest-xdist',
    'regex',
    'scipy',
    'sympy',
]

[project.optional-dependencies]
dev = []

[build-system]

[tool.pytest.ini_options]
markers = [
    "data: mark a test as a data test",
    "notest: mark a test as not using test data",
]
python_files = "day*.py"
addopts = "-s --no-header --ignore=2015 --ignore=2016 --ignore=2017 --ignore=2018"  # -n 32